Fixed iPhone portrait and landscape layout bugs. Excluding cotact form section.

--- a/sass/_partials/_layout.scss
+++ b/sass/_partials/_layout.scss
@@ -145,9 +145,7 @@ div#about.white-box.col-wrapper {
 	border-radius: 3px;
 }
 
-.blue-box-copy h6 {
-	font-weight: bold;
-}
+
 
 
 
